# libDwmPkg

./: .gitignore  Makefile  Makefile.rules  Makefile.vars.in  README.md  configure  configure.ac  dwm.m4  getvers.sh  latest_release  mkrelease.sh
apps/: Makefile
apps/dwmwhat/: .gitignore  Makefile  dwmwhat.1  dwmwhat.cc
classes/: Makefile
classes/include/: .gitignore  DwmPkg.hh  DwmPkgInfo.hh  DwmPkgInfo.hh.in  DwmPkgSegmentedLiteral.hh  DwmPkgStringLiteral.hh  Makefile
classes/tests/: .gitignore  Makefile  TestInfo.cc  TestSegmentedLiteral.cc
doc/: Doxyfile.in  Makefile  extrastyle.css  footer.html  header.html
packaging/: .gitignore  Makefile  debcontrol.in  fbsd_manifest.in  libDwmPkg.pc.in
